manifests/infra/capacitor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor-ingress
  namespace: flux-system
spec:
  ingressClassName: nginx
  rules:
    - host: capacitor.cluster.nelsondane.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: capacitor
              port:
                number: 9000
