manifests/infra/capacitor/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capacitor
  namespace: flux-system
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: cilium
  hostnames:
    - capacitor.cluster.nelsondane.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: capacitor
          port: 9000
